TRV-1584 fixed the see results alignment at the bottom
(cherry picked from commit 866d70f)

--- a/src/main/webapp/bundles/travel/less/dropdownFilters.less
+++ b/src/main/webapp/bundles/travel/less/dropdownFilters.less
@@ -42,18 +42,21 @@
     width: 100%;
   }
 
+  .dropdown-backdrop {
+    position: static;
+  }
+
   .dropdown-menu-more-filters {
-    height: 100%;
     .more-filters-container {
-      height: auto;
-      max-height: 900px;
+      height: 900px;
       overflow-y: scroll;
 
       .more-filters-results-btn {
         margin: 0;
         position: fixed;
         bottom: 0px;
-        width: 100%;
+        left: 25%;
+        width: 50%;
       }
     }
   }
@@ -66,16 +69,21 @@
     width: 100%;
   }
 
+  .dropdown-backdrop {
+    position: static;
+  }
+
   .dropdown-menu-more-filters {
     .more-filters-container {
       height: 700px;
       overflow-y: scroll;
 
       .more-filters-results-btn {
-        margin: 0;
+        margin: 20px 0 0 0;
         position: fixed;
         bottom: 0px;
-        width: 100%;
+        left: 25%;
+        width: 50%;
       }
     }
   }
@@ -222,6 +230,10 @@
       position: fixed;
       top: 95px;
       width: 100%;
+    }
+
+    .dropdown-backdrop {
+      position: static;
     }
 
     .cover-type-mobile-active {
